# semant

./: .coverage  .gitignore  AGENT_CONTEXT_SPEC.md  AGENT_LIST.txt  BOOK_CREATION_DEMO.md  BOOK_DEMO_FIXED.md  COMPREHENSIVE_SCRIPT_ANALYSIS.md  CURSOR_HELP.md  DEMO_FIX.md  DEMO_FIXED.md  DEMO_READY.md  DEMO_VERIFICATION.md  FINAL_ROADMAP_SUMMARY.md  FUNCTIONALITY_DEMO.md  INGESTION_SETUP.md  INVESTOR_FIXES_SUMMARY.md  INVESTOR_README.md  INVESTOR_STATUS.md  NEXT_STEPS.md  PROOF_BRAINROT_WORKS.md  QDrant_STATUS.md  QUICKSTART.md  README  README.md  REALITY_CHECK.md  SCRIPTS_16-20_ANALYSIS.md  SCRIPTS_26-30_ANALYSIS.md  SCRIPTS_31-35_ANALYSIS.md  SCRIPTS_41-45_ANALYSIS.md  SCRIPTS_46-50_ANALYSIS.md  SCRIPTS_51-55_ANALYSIS.md  SECURITY.md  STRATEGIC_IMPLEMENTATION_PLAN.md  WORKING_DEMO.md  a message to get you started (change here)   check_agent_types.py  coding_team_agents.py  comprehensive_email_system.py  consolidated_book_config.json  current_data_challenge.txt  (+65 more)
.taskmaster/: state.json
agents/: __init__.py  agents_readme.md
communications/: README.md  ceo_updates.md  example_prompts.md
config/: graphdb_config.py  settings.py
credentials/: README.md
docs/: CHILDRENS_BOOK_STATUS.md  EMBEDDING_PIPELINE_RESTORED.md  END_TO_END_FLOW.md  TQDM_PROGRESS_BARS_ADDED.md  WORKFLOW_VISUALIZATION_IMPLEMENTED.md  agent_book_generator_guide.md  brainrot_developer_help_request.md  brainrot_project_plan.md  brainrot_quick_help_summary.md  brainrot_status_report.md  childrens_book_implementation_summary.md  childrens_book_swarm_architecture.md  (+24 more)
stock_analysis_swarm/: INTEGRATION_CHECKLIST.md  README.md  WORKING_V1_DEMO.py  data_providers.py  demo_stock_swarm_integration.py  pyproject.toml  requirements.txt  simple_real_data.py  simple_working_demo.py
stock_analysis_swarm/agents/: __init__.py  enhanced_orchestrator.py  orchestrator.py  real_orchestrator.py
stock_analysis_swarm/clients/: __init__.py  alpha_vantage_client.py
stock_analysis_swarm/src/: __init__.py
stock_analysis_swarm/src/agents/: __init__.py
stock_analysis_swarm/src/agents/core/: __init__.py
(+900 files in other folders)
