[tool.poetry]
name = "stock-analysis-swarm"
version = "0.1.0"
description = "Multi-agent system for comprehensive stock market analysis and research"
authors = ["Stock Analysis Swarm Team"]
readme = "README.md"
python = "^3.9"

[tool.poetry.dependencies]
python = "^3.9"
# Core async and agent framework
asyncio = "^3.4.3"
aiohttp = "^3.9.0"
aiodns = "^3.1.0"
uvloop = "^0.19.0"

# Agent framework dependencies (from existing semant project)
pydantic = "^2.0.0"
loguru = "^0.7.0"

# Knowledge Graph
rdflib = "^7.0.0"
SPARQLWrapper = "^2.0.0"

# API Clients
requests = "^2.31.0"
httpx = "^0.25.0"
websockets = "^12.0"

# Data Processing
pandas = "^2.1.0"
numpy = "^1.24.0"
scipy = "^1.11.0"

# Financial Data APIs
yfinance = "^0.2.0"
alpha-vantage = "^2.3.1"
finnhub-python = "^2.4.0"

# Social Media APIs
praw = "^7.7.0"  # Reddit API
tweepy = "^4.14.0"  # Twitter API

# Web Scraping & Research
beautifulsoup4 = "^4.12.0"
selenium = "^4.15.0"
playwright = "^1.40.0"

# Technical Analysis
ta = "^0.11.0"
ta-lib = "^0.4.28"
pandas-ta = "^0.3.14b0"

# Machine Learning & Analysis
scikit-learn = "^1.3.0"
statsmodels = "^0.14.0"

# Sentiment Analysis
textblob = "^0.17.1"
vaderSentiment = "^3.3.2"
transformers = "^4.35.0"

# Visualization (optional)
plotly = "^5.18.0"
matplotlib = "^3.8.0"

# Testing
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
pytest-mock = "^3.12.0"
pytest-cov = "^4.1.0"

# Development
black = "^23.11.0"
flake8 = "^6.1.0"
mypy = "^1.7.0"
pre-commit = "^3.5.0"

[tool.poetry.group.dev.dependencies]
ipython = "^8.17.0"
jupyter = "^1.0.0"
notebook = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
